syntax = "proto3";

package api;

message CreateStorehouseRequest {
    string name = 1;
    int32 city_id = 2;
}

message Storehouse {
    int32 id = 1;
    string name = 2;
    int32 city_id = 3;
}

message GetStorehousesListByCityIdRequest {
    int32 city_id = 1;
}

message GetStorehousesListResponse {
    repeated Storehouse items = 1;
}

message Item {
    int32 id = 1;
    int32 storehouse_id = 2;
    int32 detail_id = 3;
    int32 count = 4;
}

message GetItemsByStorehouseIdRequest {
    int32 storehouse_id = 1;
}

message GetItemsByStorehouseIdResponse {
    repeated Item items = 1;
}

message CreateItemForStorehoseRequest {
    int32 detail_id = 1;
    int32 storehouse_id = 2;
}

message UpdateItemRequest {
    int32 id = 1;
    int32 count = 2;
}

message DeleteStorehouseRequest {
    int32 id = 1;
}

message DeleteItemRequest {
    int32 id = 1;
}

message Empty {}


service StorehouseService {
    rpc CreateStorehouse(CreateStorehouseRequest) returns (Storehouse){}
    rpc GetStorehousesListByCityId(GetStorehousesListByCityIdRequest) returns (GetStorehousesListResponse){}
    rpc GetItemsByStorehouseId(GetItemsByStorehouseIdRequest) returns (GetItemsByStorehouseIdResponse) {}
    rpc CreateItemForStorehouse(CreateItemForStorehoseRequest) returns (Item){}
    rpc UpdateItem(UpdateItemRequest) returns (Item){}
    rpc DeleteItem(DeleteItemRequest) returns (Empty){}
    rpc DeleteStorehouse(DeleteStorehouseRequest) returns (Empty){}
}
